some page reformatting

--- a/index.html
+++ b/index.html
@@ -209,8 +209,6 @@
 
               </div>
             </div>
-
-
           </div>
         </div>
       </div>
@@ -218,13 +216,11 @@
   </section>
 
   <section class="hero teaser">
-    <div class="container is-fullhd">
+    <div class="container is-max-desktop">
       <div class="hero-body">
-        <div class="container">
-          <video id="home1" autoplay muted loop width="100%">
-            <source src="media/all_envs.mp4" type="video/mp4">
-          </video>
-        </div>
+        <video id="home1" autoplay muted loop width="100%">
+          <source src="media/all_envs.mp4" type="video/mp4">
+        </video>
         <br>
         <h2 class="subtitle has-text-centered">
           Adaptive Horizon Actor Critic (AHAC) is a First-Order Model-Based Reinforcement Learning algorithm <br>
@@ -232,7 +228,6 @@
           while being 1000x more sample efficient and more scalable to high-dimensional tasks.
         </h2>
       </div>
-    </div>
     </div>
   </section>
 
@@ -287,10 +282,6 @@
             <h2 class="title is-3"><span class="dperact">Adaptive Horizon Actor Critic</span></h2>
 
             <div class="container">
-              <div class="columns is-vcentered  is-centered">
-                <img src="media/ahac.png" style="max-width:600px;width:100%" alt="AHAC" />
-                </br>
-              </div>
               <br>
               In our work we analyze the issues with first-order gradient estimation in differentiable simulation. We
               establish the under finite samples, these types of gradients exhibit empirical bias, particularly under
@@ -382,6 +373,8 @@
                   achieves nearly twice the reward of PPO for the same training time.
                 </h2>
               </div>
+
+              <br>
 
               <div class="container">
                 <div class="columns is-vcentered  is-centered">
