--- a/index.html
+++ b/index.html
@@ -391,6 +391,21 @@
 
             </div>
           </div>
+
+          <br>
+
+          <div class="columns is-vcentered  is-centered">
+            <h1>Manipulation experiments</h1>
+            <div id="wrapper">
+              <video id="home1" autoplay muted loop width="100%">
+                <source src="media/claw.mp4" type="video/mp4">
+              </video>
+              <video id="home2" autoplay muted loop width="100%">
+                <source src="media/spray.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+
   </section>
 
   <!-- <section class="section" id="BibTeX">
