--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@
                 </span> -->
 
                 <!-- Code Link. -->
-                <!-- <span class="link-block">
-                  <a target="_blank" href="https://anonymous.4open.science/r/DiffRL-1D68/README.md"
+                <span class="link-block">
+                  <a target="_blank" href="https://anonymous.4open.science/r/FoWM-1F48/README.md"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
                     <span>Code (Anonymized)</span>
                   </a>
-                </span> -->
+                </span>
 
               </div>
             </div>
