--- a/index.html
+++ b/index.html
@@ -247,21 +247,30 @@
             precedent for multi-task policies.
           </div>
         </div>
-        <br>
-        <div class="column is-four-fifths">
-          <div class="columns is-vcentered  is-centered">
-            <img src="media/teaser.drawio.png" alt="PWM visual explanation" />
-          </div>
-        </div>
-        <br>
-        <div class="column is-four-fifths">
-          <div class="columns is-vcentered  is-centered">
-            <img src="media/teaser_results.png" alt="PWM teaser results" />
+      </div>
+
+      <div class="container is-max-desktop">
+        <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <div class="columns is-vcentered  is-centered">
+              <img src="media/teaser.drawio.png" alt="PWM visual explanation" />
+            </div>
           </div>
         </div>
       </div>
-      <br>
-      <br>
+
+      <div class="container is-max-desktop">
+        <!-- Abstract. -->
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <div class="columns is-vcentered  is-centered">
+              <img src="media/teaser_results.png" alt="PWM teaser results" />
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <!-- </div> -->
 
@@ -284,7 +293,8 @@
             <div class="column">
               <div class="content has-text-centered">
                 <p>
-                  Website template borrowed from <a href="https://github.com/nerfies/nerfies.github.io">NeRFies</a> made
+                  Website template borrowed from <a href="https://github.com/nerfies/nerfies.github.io">NeRFies</a>
+                  made
                   by
                   the amazing <a href="https://keunhong.com/">Keunhong Park</a>.
                 </p>
