--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
           <div class="columns is-vcentered  is-centered">
             <img src="media/teaser_results.png" alt="PWM teaser results" />
           </div>
-          <h2 class="subtitle has-text-centered">
-            We evaluate PWM on high-dimensional continuous control tasks <b>(left figure)</b> and find that it not only
-            outperforms model-free baselines SAC and PPO but also achieves higher rewards than SHAC, a method using the
-            dynamics and reward function of the simulator directly. In an 80-task setting <b>(right figure)</b> using a
-            large 48M-parameter world model, PWM is able to consistently outperform
-            TDMPC2, an MBRL method that uses the same world model but plans for actions online.
-          </h2>
+          <!-- <h2 class="subtitle has-text-centered"> -->
+          We evaluate PWM on high-dimensional continuous control tasks <b>(left figure)</b> and find that it not only
+          outperforms model-free baselines SAC and PPO but also achieves higher rewards than SHAC, a method using the
+          dynamics and reward function of the simulator directly. In an 80-task setting <b>(right figure)</b> using a
+          large 48M-parameter world model, PWM is able to consistently outperform
+          TDMPC2, an MBRL method that uses the same world model but plans for actions online.
+          <!-- </h2> -->
         </div>
       </div>
     </div>
