--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           <div class="row is-full-width">
             <h2 class="title is-3"><span class="dperact">Single-task results</span></h2>
 
-            <div class="container">
+            <div class="container is-centered">
               <br>
               <video id="teaser" autoplay muted loop playsinline height="100%">
                 <source src="media/dflex.mp4" type="video/mp4">
@@ -319,7 +319,7 @@
               <br>
               <br>
 
-              <div class="column is-two-thirds">
+              <div class="column is-two-thirds is-centered">
                 <div class="columns is-vcentered  is-centered">
                   <img src="media/dflex_results_agg.png" alt="agg results" />
                 </div>
@@ -335,10 +335,10 @@
             </div>
 
 
-            <div class="row is-full-width">
+            <div class="row is-full-width is-centered">
               <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
 
-              <div class="container">
+              <div class="container is-centered">
                 <br>
                 TODO grid of videos
 
@@ -346,7 +346,7 @@
                 <br>
                 <br>
 
-                <div class="column is-two-thirds">
+                <div class="column is-two-thirds is-centered">
                   <div class="columns is-vcentered  is-centered">
                     <img src="media/mutlitask_full.png" alt="Full multi-task results" />
                   </div>
