--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
           <div class="columns is-vcentered  is-centered">
             <img src="media/teaser.drawio.png" alt="PWM visual explanation" />
           </div>
+          <br>
           Instead of building world models into algorithms, we propose using large-scale multi-task world models as
           differentiable simulators for policy learning. When well-regularized, these models enable efficient policy
           learning with first-order gradient optimization. This allows PWM to learn to solve 80 tasks in < 10 minutes
@@ -300,32 +301,17 @@
 
   <section class="section">
     <div class="container is-max-widescreen">
-
-      <div class="rows">
-
-
-        <!-- Animation. -->
-        <div class="rows is-centered ">
+      <div class="columns is-centered has-text-centered">
+        <div class="rows">
           <div class="row is-full-width">
             <h2 class="title is-3"><span class="dperact">Single-task results</span></h2>
-
             <div class="container is-centered">
               <br>
               <video id="teaser" autoplay muted loop playsinline height="100%">
                 <source src="media/dflex.mp4" type="video/mp4">
               </video>
-
               <br>
-              <br>
-              <br>
-
-              <div class="column is-two-thirds is-centered">
-                <div class="columns is-vcentered  is-centered">
-                  <img src="media/dflex_results_agg.png" alt="agg results" />
-                </div>
-              </div>
-              <br>
-              <br>
+              <img src="media/dflex_results_agg.png" alt="agg results" />
               <br>
               The figure shows 50% IQM with solid lines, mean with dashed lines, and 95% CI over all 5 tasks and 5
               random seeds. PWM is able to achieve a higher reward than model-free baselines PPO and SAC, TDMPC2, which
@@ -333,40 +319,31 @@
               simulator. These results indicate that well-regularized world models can smooth out the optimization
               landscape, allowing for better first-order gradient optimization.
             </div>
+          </div>
 
+          <div class="row is-full-width is-centered">
+            <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
 
-            <div class="row is-full-width is-centered">
-              <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
-
-              <div class="container is-centered">
-                <br>
-                TODO grid of videos
-
-                <br>
-                <br>
-                <br>
-
-                <div class="column is-two-thirds is-centered">
-                  <div class="columns is-vcentered  is-centered">
-                    <img src="media/mutlitask_full.png" alt="Full multi-task results" />
-                  </div>
+            <div class="container is-centered">
+              <br>
+              TODO grid of videos
+              <br>
+              <div class="column is-two-thirds is-centered">
+                <div class="columns is-vcentered  is-centered">
+                  <img src="media/mutlitask_full.png" alt="Full multi-task results" />
                 </div>
-                <br>
-                <br>
-                <br>
-                The <b>left figure</b> shows the performance of PWM and TDMPC2 on 30 and 80 multi-task benchmarks with
-                results over 10 random seeds. PWM is able to outperform TDMPC2 while using the same world model without
-                any form of online planning, making it the more scalable approach to large world models. The right
-                figure compares PWM, a multi-task policy, with single-task experts SAC and DreamerV3. It is impressive
-                that PWM is able to match their performance while being multi-task and only trained on offline data.
-
-                <br>
-
-                We strongly believe that increasingly large world models of billions of parameters and policy learning
-                strategies such as PWM can unlock dexterous robotics at scale.
-
               </div>
+              <br>
+              The figure shows the performance of PWM and TDMPC2 on 30 and 80 multi-task benchmarks with
+              results over 10 random seeds. PWM is able to outperform TDMPC2 while using the same world model without
+              any form of online planning, making it the more scalable approach to large world models. The right
+              figure compares PWM, a multi-task policy, with single-task experts SAC and DreamerV3. It is impressive
+              that PWM is able to match their performance while being multi-task and only trained on offline data.
             </div>
+          </div>
+          <div class="row is-full-width is-centered">
+            We strongly believe that increasingly large world models of billions of parameters and policy learning
+            strategies such as PWM can unlock dexterous robotics at scale.
           </div>
         </div>
       </div>
