--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@
             </div>
             <div class="container is-centered">
               <div class="column is-two-thirds is-centered">
-                <img src="media/dflex_results_agg.png" alt="agg results" />
+                <div class="columns is-vcentered  is-centered">
+                  <img src="media/dflex_results_agg.png" alt="agg results" />
+                </div>
               </div>
             </div>
             The figure shows 50% IQM with solid lines, mean with dashed lines, and 95% CI over all 5 tasks and 5
@@ -322,7 +324,13 @@
             simulator. These results indicate that well-regularized world models can smooth out the optimization
             landscape, allowing for better first-order gradient optimization.
           </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="container is-max-widescreen">
+      <div class="columns is-centered has-text-centered">
+        <div class="rows">
           <div class="row is-full-width is-centered">
             <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
             <div class="container is-centered">
