--- a/index.html
+++ b/index.html
@@ -298,36 +298,32 @@
       </div>
     </div> -->
   <!-- </section> -->
-
   <section class="section">
     <div class="container is-max-widescreen">
       <div class="columns is-centered has-text-centered">
-        <div class="rows">
-          <div class="row is-full-width">
-            <h2 class="title is-3"><span class="dperact">Single-task results</span></h2>
-            <div class="container is-centered">
-              <br>
-              <video id="teaser" autoplay muted loop playsinline height="100%">
-                <source src="media/dflex.mp4" type="video/mp4">
-              </video>
-            </div>
-            <div class="container is-centered">
-              <div class="column is-two-thirds is-centered">
-                <div class="columns is-vcentered  is-centered">
-                  <img src="media/dflex_results_agg.png" alt="agg results" />
-                </div>
-              </div>
-            </div>
+        <div class="column is-full">
+          <h2 class="title is-3"><span class="dperact">Single-task results</span></h2>
+          <div class="columns is-centered">
+            <video id="dflex" autoplay muted loop playsinline style="height: auto;">
+              <source src="media/dflex.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="columns is-centered">
+            <img src="media/dflex_results_agg.png" alt="agg results" class="column is-two-thirds" />
+          </div>
+          <p>
             The figure shows 50% IQM with solid lines, mean with dashed lines, and 95% CI over all 5 tasks and 5
             random seeds. PWM is able to achieve a higher reward than model-free baselines PPO and SAC, TDMPC2, which
             uses the same world model as PWM and SHAC which uses the ground-truth dynamics and reward functions of the
             simulator. These results indicate that well-regularized world models can smooth out the optimization
             landscape, allowing for better first-order gradient optimization.
-          </div>
+          </p>
         </div>
       </div>
     </div>
+  </section>
 
+  <section class="section">
     <div class="container is-max-widescreen">
       <div class="columns is-centered has-text-centered">
         <div class="rows">
